--- a/Rick&Morty Explorer/Base.lproj/Main.storyboard
+++ b/Rick&Morty Explorer/Base.lproj/Main.storyboard
@@ -1,24 +1,165 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YII-Sq-kve">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Rick_Morty_Explorer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="backMainRM" translatesAutoresizingMaskIntoConstraints="NO" id="R4K-23-PKW">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3K5-34-S29">
+                                <rect key="frame" x="0.0" y="253" width="393" height="325"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entre com o nome do personagem desejado" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yoy-jb-UJJ">
+                                        <rect key="frame" x="36" y="12.000000000000007" width="321" height="114.66666666666669"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                                        <color key="textColor" red="0.066940613090000003" green="0.16965499519999999" blue="0.098028250040000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PRc-8S-oYG">
+                                        <rect key="frame" x="37" y="158.66666666666669" width="320" height="34"/>
+                                        <color key="backgroundColor" red="0.67509377000000004" green="0.86066979170000002" blue="0.74900633100000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="320" id="iHd-08-AnL"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jvB-QT-SXk">
+                                        <rect key="frame" x="120" y="252.66666666666669" width="153" height="60"/>
+                                        <color key="tintColor" red="0.36772656440000001" green="0.31151512269999998" blue="0.1999777257" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Buscar">
+                                            <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="38"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <segue destination="AWI-fg-Nuq" kind="show" id="EZD-jm-ktN"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.4010250568" green="0.74848836659999995" blue="0.51761329170000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="jvB-QT-SXk" firstAttribute="leading" secondItem="3K5-34-S29" secondAttribute="leading" constant="120" id="4iy-Fa-oIf"/>
+                                    <constraint firstItem="PRc-8S-oYG" firstAttribute="leading" secondItem="3K5-34-S29" secondAttribute="leading" constant="37" id="8Jh-cV-3aT"/>
+                                    <constraint firstItem="jvB-QT-SXk" firstAttribute="top" secondItem="PRc-8S-oYG" secondAttribute="bottom" constant="60" id="T0A-Xy-yOU"/>
+                                    <constraint firstItem="PRc-8S-oYG" firstAttribute="top" secondItem="yoy-jb-UJJ" secondAttribute="bottom" constant="32" id="WzC-1x-qpT"/>
+                                    <constraint firstItem="yoy-jb-UJJ" firstAttribute="top" secondItem="3K5-34-S29" secondAttribute="top" constant="12" id="fPW-op-sM0"/>
+                                    <constraint firstAttribute="trailing" secondItem="yoy-jb-UJJ" secondAttribute="trailing" constant="36" id="kkC-6h-Gol"/>
+                                    <constraint firstAttribute="trailing" secondItem="jvB-QT-SXk" secondAttribute="trailing" constant="120" id="niw-Fh-GcS"/>
+                                    <constraint firstAttribute="trailing" secondItem="PRc-8S-oYG" secondAttribute="trailing" constant="36" id="u3t-pg-8r8"/>
+                                    <constraint firstItem="yoy-jb-UJJ" firstAttribute="leading" secondItem="3K5-34-S29" secondAttribute="leading" constant="36" id="xWe-Mf-eqq"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="3K5-34-S29" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="20H-hh-hLf"/>
+                            <constraint firstItem="3K5-34-S29" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Bbk-hU-2nw"/>
+                            <constraint firstItem="3K5-34-S29" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="KkX-Ys-KKx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="3K5-34-S29" secondAttribute="bottom" constant="240" id="MwC-4B-8l8"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="oUi-Rw-aCd"/>
+                    <connections>
+                        <outlet property="TfName" destination="PRc-8S-oYG" id="GrP-Yd-lCd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="310.68702290076334" y="273.23943661971833"/>
+        </scene>
+        <!--Persons Table View Controller-->
+        <scene sceneID="10Z-A9-JVe">
+            <objects>
+                <tableViewController id="AWI-fg-Nuq" customClass="PersonsTableViewController" customModule="Rick_Morty_Explorer" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="wp5-Lj-U5t">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="3Yt-8Y-Tw4">
+                            <rect key="frame" x="0.0" y="344" width="393" height="13"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        </view>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="266" id="2pK-7j-cUa">
+                                <rect key="frame" x="0.0" y="50" width="393" height="266"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2pK-7j-cUa" id="TUb-54-Lfx">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="266"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FPF-MP-U2Q">
+                                            <rect key="frame" x="20" y="45" width="126" height="114"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwd-Pi-oHY">
+                                            <rect key="frame" x="175" y="45" width="108" height="53"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="32"/>
+                                            <color key="textColor" red="0.4010250568" green="0.74848836659999995" blue="0.51761329170000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uqt-tz-ecq">
+                                            <rect key="frame" x="175" y="95" width="81" height="53"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
+                                            <color key="textColor" red="0.58176678420000005" green="0.66508758069999996" blue="0.74118745330000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.066940613090000003" green="0.16965499519999999" blue="0.098028250040000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="AWI-fg-Nuq" id="Bcb-cY-bVc"/>
+                            <outlet property="delegate" destination="AWI-fg-Nuq" id="y23-Mp-RVm"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" style="editor" id="nnX-ly-beX"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bTz-6I-yKn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1251.145038167939" y="272.53521126760563"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="aRo-cH-apB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YII-Sq-kve" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5Mm-cd-fsF">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="sTk-dv-B3z"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dTW-jl-uVe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-616.03053435114498" y="273.94366197183098"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="backMainRM" width="3840" height="2160"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
